--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </head>
     <body>
         <h1>Elephant Retreat</h1>
-        <section id="phocontainer">
+        <section id="column">
             <div class="container">
                 <img src="assets/arnold.jpg" width=150px>
                 <h2>ARNOLD</h2>
@@ -29,6 +29,8 @@
                 <h2>ARNOLD</h2>
                 <p>Just some text about some goddamn stuffed elephants.</p>
             </div>
+
+
         
         </section>
 
