--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
         <h1>Elephant Retreat</h1>
         <section id="column">
             <div class="container">
-                <img src="assets/arnold.jpg" width=150px>
+                <img src="assets/arnold.jpg">
                 <h2>ARNOLD</h2>
-                <p>Just some text about some goddamn stuffed elephants.</p>
+                <p>Just some text about some goddamn stuffed elephants</p>
             </div>
             <div class="container">
-                <img src="assets/johnny.jpg" width=150px>
+                <img src="assets/johnny.jpg">
                 <h2>ARNOLD</h2>
-                <p>Just some text about some goddamn stuffed elephants.</p>
+                <p>Just some text about some goddamn stuffed elephants</p>
             </div>
              <div class="container">
-                 <img src="assets/silvestr.jpg" width=150px>
+                 <img src="assets/silvestr.jpg">
                 <h2>ARNOLD</h2>
-                <p>Just some text about some goddamn stuffed elephants.</p>
+                <p>Just some text about some goddamn stuffed elephants</p>
             </div>
 
 
